# vcd-toggle-profiler

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  benchmark  build_cpp  rumdl.toml  run_cpp  run_rust
doc/: architecture.md
src/: main.cpp  main.rs
tests/: integration_test.cpp  smoke_test.cpp
vcd-samples/: LICENSE  README.md
vcd-samples/Briey/: Briey.v  README.md  demo.lst  dump.waveql  tb.sv
vcd-samples/bgm434/: README.md  config.svh  dump.vcd  dump.waveql
vcd-samples/jtag/: README.md  jtag.v  jtag.vcd  jtag.waveql  tb.v
vcd-samples/random/: README.md  counter.v  tb.sv
vcd-samples/swerv/: swerv_ifu_axi_2.waveql
